Added new project

--- a/src/App.css
+++ b/src/App.css
@@ -1,462 +1,38 @@
-@import './css/dynamicForm.css';
- 
-body {
-  font-family: 'Poppins', sans-serif;
-  background: var(--themeBgColor) !important;
-  height: 100%;
-  /* cursor: url("./pen.png"), auto !important */
-}
-/* books */
-
-.book-row {
-  overflow-x: auto;
-  /* white-space: nowrap; */
-  padding: 20px 0;
+.App {
+  text-align: center;
 }
 
-.book-scroll {
-  display: flex;
-  gap: 15px;
-}
-
-.book-col {
-  flex: 0 0 auto;
-  width: 600px;
-}
-
-
-/* books */
-.btn {
-  border: 1px solid transparent;
-  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-}
-
-.btn.active {
-  background-color: #007bff;
-  /* Change this color to fit your design */
-  color: #fff;
-  border-color: #007bff;
-}
-
-.btn.inactive {
-  background-color: #e9ecef;
-  /* Change this color to fit your design */
-  color: #495057;
-  border-color: #ced4da;
-}
-
-.disabled-div {
+.App-logo {
+  height: 40vmin;
   pointer-events: none;
-  opacity: 0.6;
-  cursor: not-allowed;
 }
 
-
-.navbar {
-  /* background: linear-gradient(135deg, #e0f7fa 0%, #80deea 100%) !important; */
-  background: var(--themeBgColor) !important;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-.nav-link-custom {
-  position: relative;
-  color: var(--textColor) !important;
-  text-decoration: none;
-}
-
-
-.nav-link-custom::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background-color: black;
-  bottom: 0;
-  left: 0;
-  transform: scaleX(0);
-  transition: transform 0.4s ease;
-  color: var(--textColor) !important;
-
-}
-
-.nav-link-custom:hover::after,
-.nav-link-custom.active::after {
-  transform: scaleX(1);
-  color: var(--textColor) !important;
-}
-
-
-/* < - - - - - - - - - -  //#region common */
-
-.p-datatable .p-paginator-bottom {
-  border-width: unset !important;
-  /* border-radius: 0; */
-}
-
-.modal-gradient {
-  background: var(--themeBgColor) !important;
-}
-
-.modal-body-gradient {
-  background: var(--cardColor) !important;
-}
-
-.form-gradient {
-  background: linear-gradient(135deg, #ffffff 0%, #e9edf3 100%) !important;
-}
-
-.bg-gradient-primary {
-  /* background: linear-gradient(90deg, rgb(78, 164, 235) 0%, rgba(2, 136, 209, 1) 100%); */
-}
-.dropdown-menu {
-  background: var(--cardColor) !important;
-
-}
-.cardColor {
-  background: var(--cardColor) !important;
-
-}
-.iconColor {
-  color: var(--textColor) !important;
-
-}
-.card{
-  background: var(--cardColor) !important;
-}
-
-/* General Gradient for All Poems */
-.bg-gradient-all-poems {
-  background: linear-gradient(90deg, #f7fafc 0%, #e2e8f0 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Happy Emotion Gradient */
-.bg-gradient-happiness {
-  background: linear-gradient(90deg, #fbc2eb 0%, #a6c1ee 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Sad Emotion Gradient */
-.bg-gradient-sadness {
-  background: linear-gradient(90deg, #89f7fe 0%, #66a6ff 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Angry Emotion Gradient */
-.bg-gradient-anger {
-  background: linear-gradient(90deg, #ff758c 0%, #ff7eb3 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Disgust Emotion Gradient */
-.bg-gradient-disgust {
-  background: linear-gradient(90deg, #cfd9df 0%, #e2ebf0 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Fear Emotion Gradient */
-.bg-gradient-fear {
-  background: linear-gradient(90deg, #667eea 0%, #764ba2 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Surprise Emotion Gradient */
-.bg-gradient-surprise {
-  background: linear-gradient(90deg, #fbc7d4 0%, #9796f0 100%);
-  transition: background 0.3s ease-in;
-}
-
-/* Gradient for Show All (Story and Novel) */
-.bg-gradient-show-all {
-  background: linear-gradient(90deg, #ffecd2 0%, #fcb69f 100%);
-  transition: background 0.3s ease;
-}
-
-/* Gradient for Story */
-.bg-gradient-story {
-  background: linear-gradient(90deg, #89f7fe 0%, #66a6ff 100%);
-  transition: background 0.3s ease;
-}
-
-/* Gradient for Novel */
-.bg-gradient-novel {
-  background: linear-gradient(90deg, #fbc7d4 0%, #9796f0 100%);
-  transition: background 0.3s ease;
-}
-
-/* Hover Effects */
-.bg-gradient-all-poems:hover,
-.bg-gradient-happiness:hover,
-.bg-gradient-sadness:hover,
-.bg-gradient-anger:hover,
-.bg-gradient-disgust:hover,
-.bg-gradient-fear:hover,
-.bg-gradient-surprise:hover,
-.bg-gradient-show-all:hover,
-.bg-gradient-story:hover,
-.bg-gradient-novel:hover {
-  background-position: right center;
-  filter: brightness(1.5);
-}
-
-
-
-
-.bg-none {
-  background: none !important;
-}
-
-.bg-transparent {
-  background: transparent !important;
-}
-
-.mt-40 {
-  margin-top: 40px;
-}
-
-.pt-40 {
-  padding-top: 40px;
-}
-
-/* < - - - - - - - - - -  //#region auth modal */
-
-
-
-/* < - - - - - - - - - -  //#region common */
-
-.poem-card {
-  transition: box-shadow 0.3s ease-in-out;
-}
-
-.poem-card:hover {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-}
-
-.poem-card.selected {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3) !important;
-}
-
-.alert {
-  --bs-alert-padding-x: 0.5rem !important;
-  --bs-alert-padding-y: 0.5rem !important;
-  --bs-alert-margin-bottom: unset !important;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-/* < - - - - - - - - - -  //#region common */
-
-
-/* < - - - - - - - - - -  //#region header */
-
-.popup_menu {
-  position: absolute;
-  top: 59px !important;
-  left: 1574.77px;
-  z-index: 1001;
-  transform-origin: center top;
-}
-
-/* < - - - - - - - - - -  //#region header */
-
-
-
-
-/* < - - - - - - - - - -  //#region scroll bar */
-
-::-webkit-scrollbar {
-  width: 0px !important;
-  /* Width of the scrollbar */
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  /* Color of the track */
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  /* Color of the handle */
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-  /* Color of the handle on hover */
-}
-
-/* < - - - - - - - - - -  //#region scroll bar */
-
-
-/* < - - - - - - - - - -  //#region body */
-
-p {
-  margin: unset !important;
-}
-body {
-  font-family: 'Poppins', sans-serif;
-  /* background: linear-gradient(to right, #e0f7fa, #80deea); */
-  background: var(--themeBgColor) !important;
-  height: 100%;
-}
-
-/* Ensure the main container in App covers the full height */
-#root {
+.App-header {
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.form-label, .form-select {
-  padding: 0 !important;
-  margin: 0 !important;
-  color: var(--textColor) !important;
-}
-.dropdown-item.active, .dropdown-item:active{
-  background: var(--cardColor) !important;
-  color: var(--textColor) !important;
-}
-ul {
-  padding-left: unset !important;
+.App-link {
+  color: #61dafb;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-/* //#endregion body - - - - - - - - - - > */
-
-/* < - - - - - - - - - -  //#region prime override classes */
-
-.p-button .p-button-icon-left{
-  margin: 0.3rem !important;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
- .p-button-label {
-  /* display: none;  */
-}
-
-.p-fileupload-row {
-  margin-top: 6px;
-  border-radius: 6px !important;
-  border: 0.5px solid black !important;
-}
-
-.p-button {
-  padding: 0.3rem !important;
-  border-radius: 6px !important;
-  border: 0.5px solid black !important;
-}
-
-.p-button:disabled {
-  cursor: default !important;
-}
-
-.p-fileupload .p-fileupload-buttonbar .p-button {
-  margin-right: unset !important;
-}
-
-.p-fileupload-content>.p-progressbar {
-  width: unset !important;
-}
-
-.p-fileupload .p-fileupload-buttonbar {
-  background: unset !important;
-  padding: unset !important;
-  border: unset !important;
-  color: unset !important;
-  border-bottom: unset !important;
-  border-top-right-radius: unset !important;
-  border-top-left-radius: unset !important;
-  gap: 0.5rem;
-}
-
-.p-fileupload .p-fileupload-content {
-  background: unset !important;
-  padding: unset !important;
-  border: unset !important;
-  color: unset !important;
-  border-bottom: unset !important;
-  border-top-right-radius: unset !important;
-  border-top-left-radius: unset !important;
-}
-
-.p-dropdown .p-dropdown-label {
-  width: 100% !important;
-}
-
-.p-dropdown-trigger {
-  display: none;
-}
-
-.p-datatable .p-datatable-header,
-.p-datatable .p-datatable-footer {
-  background-color: #f8f9fa !important;
-}
-
-.p-datatable .p-datatable-tbody>tr>td {
-  border: 1px solid #dee2e6 !important;
-}
-
-.p-datatable .p-datatable-tbody>tr:nth-child(even) {
-  background-color: #f2f2f2 !important;
-}
-
-.p-datatable .p-datatable-tbody>tr:hover {
-  background-color: #e9ecef !important;
-}
-
-.p-datatable .p-datatable-thead>tr>th {
-  background-color: #343a40 !important;
-  color: #ffffff !important;
-  border: 1px solid #dee2e6 !important;
-}
-
-/* Style the paginator */
-.p-paginator .p-paginator-pages .p-paginator-page {
-  background-color: #ffffff !important;
-  border: 1px solid #dee2e6 !important;
-  color: #343a40 !important;
-  margin: 0 5px !important;
-  border-radius: 4px !important;
-}
-
-.p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
-  background-color: black !important;
-  border-color: black !important;
-  color: white !important;
-}
-
-.p-paginator .p-paginator-first,
-.p-paginator .p-paginator-prev,
-.p-paginator .p-paginator-next,
-.p-paginator .p-paginator-last {
-  background-color: #ffffff !important;
-  border: 1px solid #dee2e6 !important;
-  color: #343a40 !important;
-  border-radius: 4px !important;
-  margin: 0 5px !important;
-}
-
-.p-paginator-icon {
-  /* font-size: 1.25rem !important;
-  background-color: transparent !important;
-  color: black !important; */
-}
-
-.p-paginator-next {
-  /* font-size: 1.25rem !important;
-  background-color: transparent !important;
-  color: black !important; */
-}
-
-.p-paginator {
-  gap: 16px;
-  background: unset !important;
-}
-
-.p-link {
-  padding: 0px 5px !important;
-}
-
-/* //#endregion prime override classes - - - - - - - - - - > */
