--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+
+.kalam-light {
+  font-family: "Kalam", cursive;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.kalam-regular {
+  font-family: "Kalam", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.kalam-bold {
+  font-family: "Kalam", cursive;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
 .text-truncate {
   display: -webkit-box; /* Use flexbox layout */
   -webkit-box-orient: vertical; /* Set the orientation to vertical */
