Showing most liked and latest added poems using special DB collection

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,10 @@
   font-style: normal;
 }
 
+.default-cursor {
+  cursor: default !important;
+}
+
 
 .text-truncate {
   display: -webkit-box; /* Use flexbox layout */
