--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 /* Courses */
 .course-list {
-  background: linear-gradient(to right, #f9ecad 0%, #d2b211 100%);
+  background: linear-gradient(to right, #cf9bfa 0%, #8e5ef5 100%);
   border-radius: 8px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.22), 0 10px 10px rgba(0, 0, 0, 0.2);
   padding: 30px;
